Made it so you can see all alarms in mobile mode and changed title of alarms page

--- a/alarmTimers.html
+++ b/alarmTimers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Alarm</title>
+  <title>RoutineSync : Alarms</title>
   <meta name="comp1800 template" content="My 1800 App">
 
   <!------------------------>
@@ -339,11 +339,10 @@
       </div>
     </div>
   </div>
-  <div class="emptySpace" style="padding-bottom: 10%">
-
+  <div class="emptySpace" style="padding-bottom: 8rem">
   </div>
 
-  
+
 
 
   <!-- toasts for notifs-->
