Changed appearance of landing page and added info to landing page about the app's features, added scrollspy to landing page, added jumbotron to landing page, changed toast font size to work more efficiently with different screen sizes

--- a/index.html
+++ b/index.html
@@ -40,22 +40,58 @@
   <!------------------------------>
   <!-- Your HTML Layout go here -->
 
+  <div id="login"></div>
+
   <nav id="navbarPlaceholder"></nav>
 
   <!-- Login Section -->
-  <div class="d-flex justify-content-center align-items-center vh-100">
-    <div class="card index-card">
-      <div class="card-body">
-        <h3 class="card-title text-center">Ready to Start a Consistent Routine?</h3>
-        <p class="card-text text-center">Plan Effectively and Succeed Daily, Start Your Journey Today!</p>
-        <div id="firebaseui-auth-container"></div>
-        <div class="start-button text-center">
-          <a href="login.html" class="btn btn-custom" role="button">GET STARTED</a>
-        </div>
-      </div>
+
+  <div class="getStarted px-4 pt-5 text-center" style="margin-top: 6rem; padding-bottom: 14rem; border-bottom: 2px solid rgb(0,0,0,0.3);">
+    <h1 class="display-4 fw-bold">RoutineSync</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4" style="font-size: 1.25rem;">Transform your life today. Join many
+        others who are already experiencing the benefits of a consistent routine.
+        Click below to get started and experience rapid improvements in productivity, a better work-life balance, and reduced stress.
+      </p>
+      <a href="login.html" class="landingButton btn btn-custom btn-lg px-4 me-sm-3" style="color: white;">
+        Get Started
+      </a>
     </div>
   </div>
-  
+
+  <div id="features" class="iconSection" style="padding-top: 5rem;">
+    <div class="iconContainer">
+      <div class="icon">
+        <i class='bx bx-calendar'></i>
+      </div>
+      <h3>Effortless Scheduling</h3>
+      <p class="lead mb-4">Effortlessly manage and track your events with our dynamic calendar display. View your upcoming events at a glance, 
+        as they’re clearly marked on and below the calendar. Simply click on any date to access detailed information, including the event’s 
+        location, start date and end date, title, and repeat schedule. Stay organized and never miss an important event with this intuitive, 
+        user-friendly feature.</p>
+    </div>
+    <div class="iconContainer">
+      <div class="icon">
+        <i class='bx bx-time' ></i>
+      </div>
+      <h3>Instant Timer Setup</h3>
+      <p class="lead mb-4">Boost your productivity with our versatile timer system, designed to fit your needs. Start a countdown timer, create custom preset 
+        timers, and manage multiple timers simultaneously. With built-in study presets, you can stay focused and efficient throughout your 
+        study sessions. Pause, cancel, or adjust timers anytime, and set alarms to ensure you never miss a beat. Perfect for work, study, 
+        and daily routines, this system helps you stay on track with a smooth, user-friendly experience.</p>
+    </div>
+    <div class="iconContainer">
+      <div class="icon">
+        <i class='bx bxs-group' ></i>
+      </div>
+      <h3>Collaborative Calenders</h3>
+      <p class="lead mb-4">Stay connected and on track with our integrated friend system. Easily add friends and share your schedules, 
+        allowing you to view their tasks directly on your calendar. See upcoming events and tasks from friends, helping you stay in sync 
+        with each other’s plans. Whether it’s coordinating activities, tracking progress, or simply supporting each other, this feature 
+        makes it easier to manage your time and collaborate effectively with others.</p>
+    </div>
+  </div>
+
   <!------------------------------>
   <!-- Stuff for body goes here -->
 
