--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,23 +1,25 @@
 <nav class="navbar fixed-top navbar-expand-lg custom-navbar shadow p-3 mb-5 bg-body">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">RoutineSync</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="underConstPreLogin.html">Benefits</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="underConstPreLogin.html">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="underConstPreLogin.html">Support</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">RoutineSync</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#login" data-bs-toggle="scrollspy">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#features" data-bs-toggle="scrollspy">Features</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
+
+<script>
+  document.body.setAttribute('data-bs-spy', 'scroll');
+  document.body.setAttribute('data-bs-target', '#navbarNav');
+  new bootstrap.ScrollSpy(document.body);
+</script>
