Added comments and added to the README file

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
   </div>
 
+  <!--info cards about features-->
   <div id="features" class="iconSection" style="padding-top: 5rem;">
     <div class="iconContainer">
       <div class="icon">
@@ -91,10 +92,6 @@
         makes it easier to manage your time and collaborate effectively with others.</p>
     </div>
   </div>
-
-  <!------------------------------>
-  <!-- Stuff for body goes here -->
-
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
