--- a/main.html
+++ b/main.html
@@ -60,12 +60,14 @@
         <small id="time-goes-here"></small>
       </div>
 
+      <!--The welcome toast-->
       <div class="toast-body">
         Welcome, <span id="name-goes-here" style="color:black"></span>
       </div>
     </div>
   </div>
 
+  <!--Calendar stuff-->
   <div class="container mt-4">
     <h2 id="currentMonth"></h2>
   </div>
@@ -100,6 +102,7 @@
     </div>
   </div>
 
+  <!--The upcoming events list-->
   <div class="container mt-4">
     <h3>Upcoming Events</h3>
     <ul id="eventList" class="list-group mt-3">
@@ -120,7 +123,7 @@
   </div>
   
 
-  
+    <!--The upcoming friends events list-->
   <div class="container mt-4" style="padding-bottom: 40%;">
     <h3>Friends' Upcoming Events</h3>
     <ul id="friendsEventList" class="list-group">
