--- a/notifs.html
+++ b/notifs.html
@@ -42,17 +42,14 @@
 </head>
 
 <body>
-  <!------------------------------>
-  <!-- Your HTML Layout go here -->
-  <!------------------------------>
 
-
+ <!--the list of past alerts/notifications-->
   <div class="container mt-5" id = "notifslist">
     <div id="alertsCard" class="card">
       <div class="card-body">
         <h5 class="card-title">Previous Alerts</h5>
         <ul id="alertsList" class="list-group list-group-flush">
-          <!-- Alerts here-->
+          <!-- Alerts are shown here-->
         </ul>
       </div>
     </div>
