--- a/underConst.html
+++ b/underConst.html
@@ -42,11 +42,9 @@
 </head>
 
 <body>
-  <!------------------------------>
-  <!-- Your HTML Layout go here -->
-  <!------------------------------>
 
 
+<!--Card displaying under construction message-->
   <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card index-card">
       <div class="card-body">
