--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,4 @@
+<!--The footer for navigation-->
 <footer class="footer fixed-bottom custom-navbar top-shadow p-3 bg-body">
     <div class="navicons">
         <div class="icon-circle" id="homeIcon">
