--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,3 +1,4 @@
+<!--The navigation after the user is logged in-->
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
