--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,3 +1,4 @@
+<!--The nav before the login-->
 <nav class="navbar fixed-top navbar-expand-lg custom-navbar shadow p-3 mb-5 bg-body">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">RoutineSync</a>
